@@ -11,22 +11,23 @@
 		<bundle.namespace>org.cytoscape.rest</bundle.namespace>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
-		<maven-bundle-plugin.version>4.1.0</maven-bundle-plugin.version>
-		<osgi.api.version>6.0.0</osgi.api.version>
-    	<osgi.compendium.version>5.0.0</osgi.compendium.version>
+		<maven-bundle-plugin.version>5.1.2</maven-bundle-plugin.version>
+		<osgi.api.version>7.0.0</osgi.api.version>
+    	<osgi.compendium.version>7.0.0</osgi.compendium.version>
  
- 		<karaf.version>4.2.0</karaf.version>
+ 		<karaf.version>4.3.7</karaf.version>
 		<junit.version>4.12</junit.version>
 		<jersey.version>2.23</jersey.version>
 
 		<rest.api.version>v1</rest.api.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<cytoscape.api.version>3.9.1</cytoscape.api.version>
+		<cytoscape.api.version>3.10.0-SNAPSHOT</cytoscape.api.version>
 	</properties>
 
 	<groupId>org.cytoscape</groupId>
 	<artifactId>cy-rest</artifactId>
-	<version>3.12.4-SNAPSHOT</version>
+
+	<version>3.13.1-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 	<name>cyREST</name>
 
@@ -267,6 +268,12 @@
 							<value>${cytoscape.api.version}</value>
 						</property>
 					</systemProperties>
+					<!-- Below is required for mockito -->
+        			<argLine>
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.net=ALL-UNNAMED
+						--add-opens java.base/java.util=ALL-UNNAMED
+					</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -275,8 +282,8 @@
 				<version>${maven-compiler-plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<source>11</source>
-					<target>11</target>
+					<source>17</source>
+					<target>17</target>
 					<encoding>UTF-8</encoding>
 					<optimize>true</optimize>
 					<showWarnings>true</showWarnings>
@@ -499,6 +506,12 @@
     	  <version>${karaf.version}</version>
     	  <scope>provided</scope>
 	 </dependency>
+	 <dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
 	
 		<!-- Guice -->
 		<dependency>
@@ -530,13 +543,13 @@
 		<!-- OSGi core dependency -->
 		<dependency>
 			<groupId>org.osgi</groupId>
-			<artifactId>org.osgi.core</artifactId>
+			<artifactId>osgi.core</artifactId>
 			<version>${osgi.api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
-			<artifactId>org.osgi.compendium</artifactId>
+			<artifactId>osgi.cmpn</artifactId>
 		 	<version>${osgi.compendium.version}</version>
 			<scope>provided</scope>
 		</dependency>
@@ -613,6 +626,12 @@
 			<artifactId>provider-gson</artifactId>
 			<version>2.3</version>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>com.eclipsesource.jaxrs</groupId>
+					<artifactId>jersey-all</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- Jersey -->
@@ -624,26 +643,20 @@
 		<dependency>
 			<groupId>org.ops4j.pax.logging</groupId>
 			<artifactId>pax-logging-api</artifactId>
-			<version>1.11.13</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.ops4j.pax.logging</groupId>
-			<artifactId>pax-logging-service</artifactId>
-			<version>1.11.13</version>
+			<version>2.0.10</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-annotations</artifactId>
-			<version>1.5.23</version>
+			<version>1.6.2</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-jersey2-jaxrs</artifactId>
-			<version>1.5.23</version>
+			<version>1.6.2</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.slf4j</groupId>
@@ -673,6 +686,21 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-json-jackson</artifactId>
+			<version>2.36</version><!--$NO-MVN-MAN-VER$-->
+			<scope>test</scope>
+		</dependency>
+
+		<!-- Java 17 removed the packaged JavaScript engine, using grallvm instead. -->
+		<dependency>
+			<groupId>org.graalvm.js</groupId>
+			<artifactId>js</artifactId>
+			<version>22.0.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.graalvm.js</groupId>
+			<artifactId>js-scriptengine</artifactId>
+			<version>22.0.0</version>
 			<scope>test</scope>
 		</dependency>
 
